--- a/build
+++ b/build
@@ -12,13 +12,11 @@ buildmodules=Y
 while test "$1" != ''
 do
 	case "$1" in
-	
 	'-d') debug=Y;;
 	'-n') buildmodules=N;;
 	'-b') shift; bld="$1";;
 	'-t') shift; toolchain="$1";;
 	'-j') shift; test "$1" -gt 0 && makejobs="$1";;
-	
 	esac
 
 	shift
@@ -30,20 +28,14 @@ case "$toolchain" in
 gcc);;
 gcc-nolto);;
 clang);;
-*) echo "toolchain should be one of: gcc gcc-nolto clang"; false
+mingw32-nolto);;
+*) echo "toolchain should be one of: gcc gcc-nolto clang mingw32-nolto"; false
 esac
 
 bld="$(cd "$bld" && pwd)"
 fgn="$(cd "$foreign" && pwd)"
 dbg="$debug"
-
-info=($(echo "$toolchain" | awk '{split($0, a, ":"); print(a[1], a[2], a[3])}'))
-
-echo ${info[@]}
-
-tcn="${info[0]}"
-test ! -z "${info[1]}" && ttgt="ttarget=${info[1]}"
-test ! -z "${info[2]}" && tver="tversion=${info[2]}"
+tcn="$toolchain"
 
 foreignmake () {
 	echo building "$@"
@@ -53,9 +45,7 @@ foreignmake () {
 	test -d "$froot" || { echo "no foreign module: $froot"; false; }
 	mkdir -p "$fbld"
 	( cd "$froot/src"; make -j $makejobs -f gnu.mk \
-		bld="$fbld" foreign="$fgn" \
-			toolchain="$tcn" "$ttgt" "$tver" \
-			debug="$dbg" "$@" )
+		bld="$fbld" foreign="$fgn" toolchain="$tcn" debug="$dbg" "$@" )
 	echo
 }
 
@@ -65,6 +55,4 @@ then
 fi
 
 ( cd "$base/src" && make -j $makejobs -f gnu.mk \
-	bld="$bld" foreign="$fgn" \
-		toolchain="$tcn" "$ttgt" "$tver" \
-		debug="$dbg" )
+	bld="$bld" foreign="$fgn" toolchain="$tcn" debug="$dbg" )
